--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
     <title>Univesp</title>
+    <link href="https://fonts.googleapis.com/css?family=Balthazar|Oxygen" rel="stylesheet">
   </head>
   <body>
     <noscript>Para utilizar essa aplicação ative o Javascriptdo seu navegador.</noscript>
